# BOT

./: .bandit  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ACCEPTANCE_CRITERIA_VALIDATION.md  CHANGELOG.md  CONFIG_CALENDAR.md  CONTRIBUTING.md  FEED_ABSTRACTION_IMPLEMENTATION.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_INTEGRATION_COMPLETION_REPORT.md  LICENSE  OBSERVABILITY_IMPLEMENTATION.md  ORDER_LIFECYCLE_V2_SUMMARY.md  PR3_LOG_REDACTION_COMPLETE.md  PR4_quality_report.md  PR4_quality_report_final.md  PROJECT_SUMMARY_FOR_CHATGPT.md  PROMPT26_COMPLETION_REPORT.md  PROMPT27_COMPLETION_REPORT.md  PROMPT28_COMPLETION_REPORT.md  PROMPT29_COMPLETION_REPORT.md  PROMPT30_COMPLETION_REPORT.md  PROMPT31_COMPLETION_REPORT.md  PROMPT32_COMPLETION_REPORT.md  PR_SEQUENCE_COMPLETION_REPORT.md  README.md  README_new.md  README_old.md  RELEASE_ENGINEERING_SUMMARY.md  RISK_GOVERNANCE_V2_IMPLEMENTATION.md  RISK_MANAGEMENT.md  RUNBOOK.md  SECURITY_IMPLEMENTATION_COMPLETE.md  UPGRADE_05_LOGGING.md  UPGRADE_09_COMPLETE.md  app.py  app.py.new  (+89 more)
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-mt5.yml  ci.yml  release-drafter.yml  secret-scan.yml
adapters/: __init__.py  mt5_broker.py  mt5_broker_minimal.py  mt5_broker_new.py  paper_broker.py
app/: __init__.py  broker_factory.py  pipeline.py
artifacts/: metrics-20250908-1759.json  metrics-20250908-1840.json
audit/: audit_logger.py  config_snapshot.py
audit/snapshots/: config_snapshot_20250908_075250.json
backtest/: chart_renderer.py  config_loader.py  runner.py
backups/: trading_bot_backup_20250908_163118.tar.gz.sha256
backups/temp_backup_20250908_163118/: BACKUP_MANIFEST.json
backups/temp_backup_20250908_163118/state/: bandit_results.json
config/: legacy_adapter.py  settings.py
configs/: experiments.yaml  risk_regimes.yaml  strategy.yaml  symbol_profiles.yaml
core/: __init__.py  config.py  logger.py  mt5_client.py  state.py  trade_executor.py  vision_context.py  vision_schema.py
core/broker/: __init__.py  gateway.py  models.py
core/events/: __init__.py  bus.py  types.py
core/executor/: __init__.py  idempotent.py  order_book.py  reconciler.py
core/exp/: __init__.py  assign.py  guard.py  pipeline.py
core/positions/: __init__.py  aggregator.py  policy.py
core/sizing/: sizing.py
core/symbols/: __init__.py  profile.py
dashboard/: app.py  auth.py  deps.py  users.py
dashboard/static/: dashboard.css  dashboard.js
dashboard/templates/: 404.html  admin.html  base.html  charts.html  error.html  login.html  orders.html  overview.html
data/: EURUSD_H1.csv  EURUSD_H4.csv  EURUSD_M30.csv  GBPUSD_H1.csv  GBPUSD_H4.csv  GBPUSD_M30.csv  XAUUSD_H1.csv  XAUUSD_H4.csv  XAUUSD_M30.csv  create_sample_data.py  generate_test_data.py
data/data/: EURUSD_M240.csv  EURUSD_M30.csv  EURUSD_M60.csv  GBPUSD_M240.csv  GBPUSD_M30.csv  GBPUSD_M60.csv  XAUUSD_M240.csv  XAUUSD_M30.csv  XAUUSD_M60.csv
demo_artifacts/2025-09-07/: manifest.json
docs/: GA_READINESS.md  LOG_REDACTION_SYSTEM.md  MT5_TESTING_STRATEGY.md  POST_UPGRADE_SUMMARY.md  WEEKLY_OPS_REPORT.md
examples/: i18n_timezone_demo.py  vision_analysis.py
feeds/: __init__.py  atr.py  backtest.py  base.py  factory.py  live_mt5.py
infra/: id_store.sqlite  latency_tracker.py  performance_integration.py  scheduler.py  secrets.py  workqueue.py
integrations/: calendar.py  trading_econ.py
lab/: __init__.py  __main__.py  params.yaml  runner.py  test_params.yaml  visualize.py
models/: __init__.py  slippage.py
observability/: __init__.py  alerts.py  health.py  httpd.py  metrics.py
releases/: v1.0.0_metadata.json
reports/: backtest_MA_Crossover_RSI_20250907_215730_equity.csv  backtest_MA_Crossover_RSI_20250907_215730_summary.csv  backtest_MA_Crossover_RSI_20250907_215730_trades.csv  backtest_Test_Strategy_20250907_215019_equity.csv  backtest_Test_Strategy_20250907_215019_summary.csv  backtest_Test_Strategy_20250907_215019_test_equity.csv  backtest_Test_Strategy_20250907_215019_test_summary.csv  backtest_Test_Strategy_20250907_215019_test_trades.csv  backtest_Test_Strategy_20250907_215019_trades.csv
risk/: __init__.py  governor.py  governor_v2.py  position.py  regime.py  session.py  telegram_alerts.py  trailing.py  validator.py
scripts/: .bandit_results.json  backup.py  dash_user_add.py  demo_mongolian_logs.py  dr_drill.py  export_audit_pack.py  ga_check.py  ga_check_simple.py  ga_smoke_mn.py  mk_tag.py  ops_weekly_report.py  quick_diagnostics.py  restore.py  run_dashboard.py  secret_get.py  secret_list.py  secret_set.py  snapshot_metrics.py  validate_quality_gates.py
services/: __init__.py  chart_renderer.py  chart_tasks.py  telegram.py  telegram_commands.py  telegram_notify.py  telegram_v2.py  trade_logging.py  vision_context.py
state/: limits.json  limits.json.backup
strategies/: __init__.py  baseline.py  indicators.py
tests/: conftest.py  test_broker_factory.py  test_broker_interface.py  test_dashboard_auth.py  test_event_bus.py  test_feed_abstraction.py  test_idempotent.py  test_log_redaction_comprehensive.py  test_log_redaction_security.py  test_logging_redaction.py  test_mt5_less_strategy.py  test_mt5_strategy_enhanced.py  test_netting.py  test_reconciler.py  test_risk_governor_v2.py  test_risk_regime.py  test_trailing_probe.py
tests/fixtures/: __init__.py  fake_broker.py
tests/observability/: __init__.py  test_health.py  test_metrics.py
utils/: __init__.py  atomic_io.py  i18n.py  mt5_exec.py  timez.py
